# Yolov1_based_on_C_plus_plus

./: .gitignore  CMakeLists.txt  README.md  mnist_config.txt  train_real_data.sh
docs/: cifar10_training_guide.md  real_dataset_training.md  training_guide.md
examples/: cifar10_evaluate.cpp  cifar10_to_yolo.cpp  demo.cpp  mnist_to_yolo.cpp  train_config.txt  train_example.cpp  train_real_data.cpp
include/: network.h  yolo.h
scripts/: inference.sh  prepare_and_train_mnist.sh  prepare_cifar10.sh  test_loss_calculation.sh  train.sh  train_and_evaluate_cifar10.sh
src/: bbox.cpp  loss.cpp  network.cpp  yolo.cpp
